@@ -30,11 +30,11 @@ package edu.illinois.nondex.plugin;
 
 import java.io.File;
 import java.nio.file.Paths;
-import java.util.logging.Level;
 import java.util.regex.Pattern;
 
 import edu.illinois.nondex.common.Configuration;
 import edu.illinois.nondex.common.ConfigurationDefaults;
+import edu.illinois.nondex.common.Level;
 import edu.illinois.nondex.common.Logger;
 import edu.illinois.nondex.common.Mode;
 import edu.illinois.nondex.common.Utils;
@@ -84,7 +84,15 @@ public class NonDexSurefireExecution extends CleanSurefireExecution {
             }
             configElement.getChild("test").setValue(this.configuration.testName);
         }
-        String argLineToSet = "" + "-Xbootclasspath/p:" + pathToNondex + File.pathSeparator
+
+        String argLineToSetPrefix = "" + "-Xbootclasspath/p:";
+        if (!Utils.checkJDKBefore8()) {
+            argLineToSetPrefix = "" + "--add-exports java.base/edu.illinois.nondex.common=ALL-UNNAMED "
+                    + "--add-exports java.base/edu.illinois.nondex.shuffling=ALL-UNNAMED "
+                    + " --patch-module " + "java.base=";
+        }
+
+        String argLineToSet = argLineToSetPrefix + pathToNondex + File.pathSeparator
                 + Paths.get(mavenSession.getLocalRepository().getBasedir(),
                         "edu", "illinois", annotationsModuleName, ConfigurationDefaults.VERSION,
                         annotationsModuleName + "-" + ConfigurationDefaults.VERSION + ".jar")
